   erasing. Return TRUE to prevent default erasure.
* Scribble Tutorial now demonstrates the use of command line arguments
* Added the following set of gdi classes: CBitmap, CBrush, CFont, CPalette, 
   CPen and CRgn. These work in cooperation with the existing CDC class.
* Extended the CSize, CPoint and CRect classes
* Extended CMDIFrame and CMDIChild. CMDIChild::SetHandles is now used to set
   the MDI child's menu and accelerator table.   

Changes in detail
-----------------
- Added CBitmap
- Added CBrush
- Added CFont
- Added CPalette
- Added CPen
- Added CRgn
- Added CTaskDialog
- Added CLoadString (replaces CWnd::LoadString)
- Added tStringStream typedef (a TCHAR stringstream)
- Added	A2BSTR	
- Added	A2OLE	
- Added	A2T		
- Added	A2W		
- Added	OLE2A	
- Added	OLE2T	
- Added	OLE2W	
- Added	T2A		
- Added	T2BSTR	
- Added	T2OLE   
- Added	T2W		
- Added	W2A		
- Added	W2BSTR	
- Added	W2OLE	
- Added	W2T
- Added CDC::AttachPalette
- Added CDC::CreatePalette
- Added CDC::CreateHalftonePalette
- Added CDC::DetachPalette		
- Added CDC::GetBitmapInfo
- Added CDC::GetBrushInfo
- Added CDC::GetFontInfo
- Added CDC::GetPenInfo
- Added CDC::ExtSelectClipRgn
- Added CDC::ExcludeClipRect
- Added CDC::GetClipBox	
- Added CDC::GetClipRgn		
- Added CDC::IntersectClipRect
- Added CDC::OffsetClipRgn
- Added CDC::PtVisible
- Added CDC::RectVisible
- Added CDC::SelectClipRgn
- Added CDialog::AttachItem
- Added CDockContainer::SetActiveContainer
- Added CDocker::Close
- Added CDocker::SetCaptionHeight
- Added CFrame::GetFrameAccel
- Added CFrame::ShowMenu
- Added CMDIChild::GetMDIFrame
- Added CMDIChild::SetHandles
- Added CMDIFrame::GetMDIClient
- Added CMDIFrame::MDICascade
- Added CMDIFrame::MDIIconArrange
- Added CMDIFrame::MDIMaximize
- Added CMDIFrame::MDINext
- Added CMDIFrame::MDIPrev
- Added CMDIFrame::MDIRestore
- Added CMDIFrame::MDITile
- Added CResizer::GetMaxRect
- Added CResizer::GetMinRect
- Added CResizer::HandleMessage
- Added CTab::SetFixedWidth